--- a/headhuntingjob/src/main/res/layout/activity_headdetails.xml
+++ b/headhuntingjob/src/main/res/layout/activity_headdetails.xml
@@ -2,13 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/bg_color">
+    android:background="@color/bg_color"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <include layout="@layout/actionbar" />
 
         <RelativeLayout
@@ -32,8 +33,8 @@
 
                     <ImageView
                         android:id="@+id/iv_share"
-                        android:layout_width="25dip"
-                        android:layout_height="25dip"
+                        android:layout_width="20dip"
+                        android:layout_height="20dip"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="@dimen/padding_small"
                         android:background="@drawable/icon_share" />
@@ -48,7 +49,7 @@
                         android:paddingTop="2dip"
                         android:text="分享"
                         android:textColor="@color/topbar_bg"
-                        android:textSize="@dimen/text_default" />
+                        android:textSize="@dimen/text_litter" />
 
                 </RelativeLayout>
 
@@ -60,8 +61,9 @@
                     <Button
                         android:id="@+id/btn_apply"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/button_height"
                         android:layout_centerVertical="true"
+                        android:layout_marginTop="@dimen/padding_small"
                         android:background="@drawable/button_bg"
                         android:paddingBottom="@dimen/padding_small"
                         android:paddingTop="@dimen/padding_small"
@@ -79,8 +81,8 @@
 
                     <ImageView
                         android:id="@+id/iv_collect"
-                        android:layout_width="25dip"
-                        android:layout_height="25dip"
+                        android:layout_width="20dip"
+                        android:layout_height="20dip"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="@dimen/padding_small"
                         android:background="@drawable/icon_collect" />
@@ -95,7 +97,7 @@
                         android:paddingTop="2dip"
                         android:text="收藏"
                         android:textColor="@color/topbar_bg"
-                        android:textSize="@dimen/text_default" />
+                        android:textSize="@dimen/text_litter" />
 
                 </RelativeLayout>
 
@@ -115,6 +117,7 @@
 
         </RelativeLayout>
     </LinearLayout>
+
     <RelativeLayout
         android:id="@+id/tipLayout"
         android:layout_width="match_parent"
@@ -123,11 +126,12 @@
         android:clickable="true"
         android:onClick="hideTip"
         android:visibility="invisible">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="220dip"
-            android:src="@drawable/tip_zouy"
+            android:layout_centerInParent="true"
             android:scaleType="fitCenter"
-            android:layout_centerInParent="true"/>
+            android:src="@drawable/tip_zouy" />
     </RelativeLayout>
 </RelativeLayout>
