--- a/headhuntingjob/src/main/res/layout/item_headhunting.xml
+++ b/headhuntingjob/src/main/res/layout/item_headhunting.xml
@@ -56,21 +56,22 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_apply"
                 android:layout_width="wrap_content"
                 android:layout_height="25dip"
-                android:layout_marginLeft="@dimen/padding_default"
                 android:gravity="center_vertical"
-                android:text="发布日期："
+                android:paddingLeft="@dimen/padding_default"
+                android:text="工作地点："
                 android:textColor="@color/light_color"
                 android:textSize="@dimen/text_small" />
 
             <TextView
-                android:id="@+id/tv_date"
+                android:id="@+id/tv_place"
                 android:layout_width="wrap_content"
                 android:layout_height="25dip"
+                android:ellipsize="end"
                 android:gravity="center_vertical"
-                android:text="2015-12-21"
+                android:maxLines="1"
+                android:text="六安市"
                 android:textColor="@color/light_color"
                 android:textSize="@dimen/text_small" />
 
@@ -83,24 +84,16 @@
                 android:background="@color/light_color" />
 
             <TextView
+                android:id="@+id/tv_date"
                 android:layout_width="wrap_content"
                 android:layout_height="25dip"
                 android:gravity="center_vertical"
-                android:paddingLeft="@dimen/padding_small"
-                android:text="工作地点："
+                android:paddingLeft="@dimen/padding_default"
+                android:text="2015-12-21"
                 android:textColor="@color/light_color"
                 android:textSize="@dimen/text_small" />
 
-            <TextView
-                android:id="@+id/tv_place"
-                android:layout_width="match_parent"
-                android:layout_height="25dip"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:maxLines="1"
-                android:text="六安市"
-                android:textColor="@color/light_color"
-                android:textSize="@dimen/text_small" />
+
         </LinearLayout>
 
     </LinearLayout>
