--- a/bluecollar/src/main/res/layout/item_msg_detail.xml
+++ b/bluecollar/src/main/res/layout/item_msg_detail.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="@dimen/padding_small"
         android:paddingTop="2dp"
         android:paddingBottom="2dp"
-        android:background="@color/grey"/>
+        android:background="@drawable/msg_time_bg"/>
 
     <LinearLayout
         android:layout_width="match_parent"
