--- a/common/src/main/res/layout/item_select.xml
+++ b/common/src/main/res/layout/item_select.xml
@@ -13,7 +13,22 @@
         android:paddingTop="@dimen/padding_small"
         android:paddingBottom="@dimen/padding_small"
         android:gravity="center_vertical"
+        android:textSize="@dimen/text_default"
+        android:textColor="@color/main_color"
         android:text="网络游戏"/>
+
+    <TextView
+        android:id="@+id/tvCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingRight="@dimen/padding_small"
+        android:paddingTop="@dimen/padding_small"
+        android:paddingBottom="@dimen/padding_small"
+        android:gravity="center_vertical"
+        android:textSize="@dimen/text_small"
+        android:textColor="@color/light_color"
+        android:visibility="invisible"
+        android:text="已选择6项"/>
 
     <ImageView
         android:id="@+id/imgSelected"
