--- a/applyjobs/src/main/res/layout/fragment_job_detail.xml
+++ b/applyjobs/src/main/res/layout/fragment_job_detail.xml
@@ -44,6 +44,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="5dip"
+            android:layout_marginTop="5dip"
             android:layout_weight="1">
 
             <Button
