--- a/applyjobs/src/main/res/layout/item_jobsearchresult.xml
+++ b/applyjobs/src/main/res/layout/item_jobsearchresult.xml
@@ -7,16 +7,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="80dip"
-        android:layout_marginLeft="@dimen/space_10"
-        android:layout_marginRight="@dimen/space_10"
-        android:orientation="horizontal">
+        android:background="@drawable/list_item_bg"
+        android:orientation="horizontal"
+        android:paddingLeft="@dimen/space_10"
+        android:paddingRight="@dimen/space_10">
 
         <CheckBox
             android:id="@+id/item_check"
             android:layout_width="20dip"
-            android:layout_marginRight="@dimen/padding_small"
             android:layout_height="20dip"
             android:layout_gravity="center_vertical"
+            android:layout_marginRight="@dimen/padding_small"
             android:background="@drawable/checkbox_bg"
             android:button="@null"
             android:padding="@dimen/space_10"
