--- a/bluecollar/src/main/res/layout/item_bluejob.xml
+++ b/bluecollar/src/main/res/layout/item_bluejob.xml
@@ -6,10 +6,11 @@
               android:orientation="vertical">
 
     <LinearLayout
+        android:background="@drawable/list_item_bg"
         android:layout_width="match_parent"
         android:layout_height="80dip"
-        android:layout_marginLeft="@dimen/padding_small"
-        android:layout_marginRight="@dimen/space_10"
+        android:paddingRight="@dimen/padding_small"
+        android:paddingLeft="@dimen/padding_small"
         android:orientation="horizontal"
         android:paddingTop="@dimen/padding_small">
 
