校园列表样式修改

--- a/campusjobs/src/main/res/layout/activity_campuscompany_details.xml
+++ b/campusjobs/src/main/res/layout/activity_campuscompany_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/window_background"
@@ -20,9 +21,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/space_10"
-                android:layout_marginRight="@dimen/space_10"
-                android:layout_marginTop="@dimen/space_10"
+                android:layout_marginLeft="@dimen/padding_small"
+                android:layout_marginRight="@dimen/padding_small"
+                android:layout_marginTop="@dimen/padding_small"
                 android:orientation="vertical">
 
                 <TextView
@@ -30,9 +31,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="中国视频娱乐网"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/font_size_14"
-                    android:textStyle="bold" />
+                    android:textColor="@color/main_color"
+                    android:textSize="@dimen/font_size_14" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -47,14 +47,14 @@
                         android:layout_height="0dip"
                         android:layout_weight="1"
                         android:orientation="horizontal"
-                        android:padding="@dimen/space_10">
+                        android:padding="@dimen/padding_small">
 
                         <TextView
                             android:layout_width="60dip"
                             android:layout_height="match_parent"
                             android:text="性质"
                             android:textColor="@color/bule_low_color"
-                            android:textSize="@dimen/font_size_14" />
+                            android:textSize="@dimen/text_small" />
 
                         <TextView
                             android:id="@+id/com_nature"
@@ -63,8 +63,8 @@
                             android:layout_weight="3"
                             android:ellipsize="end"
                             android:singleLine="true"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/font_size_14" />
+                            android:textColor="@color/light_color"
+                            android:textSize="@dimen/text_small" />
 
                     </LinearLayout>
 
@@ -75,14 +75,14 @@
                         android:layout_weight="1"
                         android:background="#f9f9f9"
                         android:orientation="horizontal"
-                        android:padding="@dimen/space_10">
+                        android:padding="@dimen/padding_small">
 
                         <TextView
                             android:layout_width="60dip"
                             android:layout_height="match_parent"
                             android:text="人数"
                             android:textColor="@color/bule_low_color"
-                            android:textSize="@dimen/font_size_14" />
+                            android:textSize="@dimen/text_small" />
 
                         <TextView
                             android:id="@+id/com_num"
@@ -91,8 +91,8 @@
                             android:layout_weight="3"
                             android:ellipsize="end"
                             android:singleLine="true"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/font_size_14" />
+                            android:textColor="@color/light_color"
+                            android:textSize="@dimen/text_small" />
 
                     </LinearLayout>
 
@@ -102,14 +102,14 @@
                         android:layout_height="0dip"
                         android:layout_weight="1"
                         android:orientation="horizontal"
-                        android:padding="@dimen/space_10">
+                        android:padding="@dimen/padding_small">
 
                         <TextView
                             android:layout_width="60dip"
                             android:layout_height="match_parent"
                             android:text="行业"
                             android:textColor="@color/bule_low_color"
-                            android:textSize="@dimen/font_size_14" />
+                            android:textSize="@dimen/text_small" />
 
                         <TextView
                             android:id="@+id/com_industry"
@@ -118,8 +118,8 @@
                             android:layout_weight="3"
                             android:ellipsize="end"
                             android:singleLine="true"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/font_size_14" />
+                            android:textColor="@color/light_color"
+                            android:textSize="@dimen/text_small" />
 
                     </LinearLayout>
 
@@ -130,14 +130,14 @@
                         android:layout_weight="1"
                         android:background="#f9f9f9"
                         android:orientation="horizontal"
-                        android:padding="@dimen/space_10">
+                        android:padding="@dimen/padding_small">
 
                         <TextView
                             android:layout_width="60dip"
                             android:layout_height="match_parent"
                             android:text="地址"
                             android:textColor="@color/bule_low_color"
-                            android:textSize="@dimen/font_size_14" />
+                            android:textSize="@dimen/text_small" />
 
                         <LinearLayout
                             android:layout_width="0dip"
@@ -151,17 +151,22 @@
                                 android:layout_height="wrap_content"
                                 android:ellipsize="end"
                                 android:maxLines="2"
-                                android:textColor="@color/black"
-                                android:textSize="@dimen/font_size_14" />
+                                android:textColor="@color/light_color"
+                                android:textSize="@dimen/text_small" />
 
-                            <TextView
-                                android:id="@+id/com_map"
+                            <cn.goodjobs.common.view.ExtendedTouchView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:paddingBottom="@dimen/space_5"
-                                android:paddingTop="@dimen/space_5"
-                                android:text=" 查看地图"
-                                android:textColor="@color/black" />
+                                app:touchHeight="40dip">
+
+                                <TextView
+                                    android:id="@+id/com_map"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text=" 查看地图"
+                                    android:textColor="@color/light_color"
+                                    android:textSize="@dimen/text_small" />
+                            </cn.goodjobs.common.view.ExtendedTouchView>
 
                         </LinearLayout>
 
@@ -174,14 +179,14 @@
                         android:layout_height="0dip"
                         android:layout_weight="1"
                         android:orientation="horizontal"
-                        android:padding="@dimen/space_10">
+                        android:padding="@dimen/padding_small">
 
                         <TextView
                             android:layout_width="60dip"
                             android:layout_height="match_parent"
                             android:text="电话"
                             android:textColor="@color/bule_low_color"
-                            android:textSize="@dimen/font_size_14" />
+                            android:textSize="@dimen/text_small" />
 
                         <TextView
                             android:id="@+id/com_phone"
@@ -189,8 +194,8 @@
                             android:layout_height="match_parent"
                             android:ellipsize="end"
                             android:singleLine="true"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/font_size_14" />
+                            android:textColor="@color/light_color"
+                            android:textSize="@dimen/text_small" />
 
                     </LinearLayout>
 
@@ -200,10 +205,11 @@
                 <LinearLayout
                     android:id="@+id/job_similar_box"
                     android:layout_width="match_parent"
-                    android:layout_height="40dip"
-                    android:layout_marginTop="@dimen/space_10"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/padding_small"
                     android:background="@drawable/list_item_bg"
                     android:orientation="vertical"
+                    android:padding="@dimen/padding_small"
                     android:visibility="visible">
 
                     <TextView
@@ -211,9 +217,8 @@
                         android:layout_height="match_parent"
                         android:drawableRight="@drawable/r_icon"
                         android:gravity="center_vertical"
-                        android:paddingLeft="@dimen/space_15"
                         android:text="招聘职位"
-                        android:textColor="@color/black"
+                        android:textColor="@color/bule_low_color"
                         android:textSize="@dimen/font_size_14" />
                 </LinearLayout>
 
@@ -225,7 +230,7 @@
                     android:layout_marginTop="@dimen/space_10"
                     android:background="@color/white"
                     android:orientation="vertical"
-                    android:padding="@dimen/space_15">
+                    android:padding="@dimen/padding_small">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -233,8 +238,7 @@
                         android:gravity="center_vertical"
                         android:text="公司风采"
                         android:textColor="@color/bule_low_color"
-                        android:textSize="@dimen/font_size_14"
-                        android:textStyle="bold" />
+                        android:textSize="@dimen/font_size_14" />
 
                     <cn.goodjobs.common.view.CustomHScrollView
                         android:layout_width="match_parent"
@@ -253,12 +257,13 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/com_content_box"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/space_10"
+                    android:layout_marginTop="@dimen/padding_small"
                     android:background="@color/white"
                     android:orientation="vertical"
-                    android:padding="@dimen/space_15">
+                    android:padding="@dimen/padding_small">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -266,8 +271,7 @@
                         android:gravity="center_vertical"
                         android:text="公司介绍"
                         android:textColor="@color/bule_low_color"
-                        android:textSize="@dimen/font_size_14"
-                        android:textStyle="bold" />
+                        android:textSize="@dimen/font_size_14" />
 
 
                     <TextView
@@ -275,9 +279,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/space_10"
+                        android:lineSpacingMultiplier="1.3"
                         android:maxLines="5"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/font_size_14"></TextView>
+                        android:textColor="@color/main_color"
+                        android:textSize="@dimen/text_small"></TextView>
 
                     <ImageView
                         android:id="@+id/com_updown"
