--- a/campusjobs/src/main/res/layout/fragment_job_detail.xml
+++ b/campusjobs/src/main/res/layout/fragment_job_detail.xml
@@ -21,8 +21,8 @@
 
             <ImageView
                 android:id="@+id/iv_share"
-                android:layout_width="25dip"
-                android:layout_height="25dip"
+                android:layout_width="20dip"
+                android:layout_height="20dip"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/padding_small"
                 android:background="@drawable/icon_share" />
@@ -37,13 +37,15 @@
                 android:paddingTop="2dip"
                 android:text="分享"
                 android:textColor="@color/topbar_bg"
-                android:textSize="@dimen/text_small" />
+                android:textSize="@dimen/text_litter" />
 
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="5dip"
+            android:layout_marginTop="5dip"
             android:layout_weight="1">
 
             <Button
@@ -68,8 +70,8 @@
 
             <ImageView
                 android:id="@+id/iv_collect"
-                android:layout_width="25dip"
-                android:layout_height="25dip"
+                android:layout_width="20dip"
+                android:layout_height="20dip"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/padding_small"
                 android:background="@drawable/icon_collect" />
@@ -84,7 +86,7 @@
                 android:paddingTop="2dip"
                 android:text="收藏"
                 android:textColor="@color/topbar_bg"
-                android:textSize="@dimen/text_small" />
+                android:textSize="@dimen/text_litter" />
 
         </RelativeLayout>
 
@@ -133,7 +135,6 @@
                     android:background="@drawable/list_item_bg"
                     android:drawableRight="@drawable/r_icon"
                     android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/space_5"
                     android:textColor="@color/main_color"
                     android:textSize="@dimen/font_size_14" />
             </LinearLayout>
@@ -259,7 +260,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/padding_small"
-                    android:textColor="@color/light_color"
+                    android:lineSpacingMultiplier="1.3"
+                    android:textColor="@color/main_color"
                     android:textSize="@dimen/text_small"></TextView>
 
             </LinearLayout>
@@ -288,7 +290,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/padding_small"
-                    android:textColor="@color/light_color"
+                    android:lineSpacingMultiplier="1.3"
+                    android:textColor="@color/main_color"
                     android:textSize="@dimen/text_small"></TextView>
 
             </LinearLayout>
