职位详情，相似位置和感兴趣职位没有隐藏

--- a/bluecollar/src/main/res/layout/fragment_bluejob_detail.xml
+++ b/bluecollar/src/main/res/layout/fragment_bluejob_detail.xml
@@ -363,6 +363,7 @@
 
 
             <LinearLayout
+                android:id="@+id/job_similar_bigbox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding_small"
