--- a/applyjobs/src/main/res/layout/item_headdetails.xml
+++ b/applyjobs/src/main/res/layout/item_headdetails.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/list_item_bg"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/iv_arrow"
@@ -25,7 +25,7 @@
             android:padding="@dimen/padding_small"
             android:text="提高面试"
             android:textColor="@color/main_color"
-            android:textSize="@dimen/text_default" />
+            android:textSize="@dimen/text_small" />
 
     </RelativeLayout>
 
