--- a/applyjobs/src/main/res/layout/item_jobsearchresult.xml
+++ b/applyjobs/src/main/res/layout/item_jobsearchresult.xml
@@ -6,11 +6,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dip"
+        android:layout_height="85dip"
         android:background="@drawable/list_item_bg"
         android:orientation="horizontal"
+        android:paddingBottom="2.5dip"
         android:paddingLeft="@dimen/space_10"
-        android:paddingRight="@dimen/space_10">
+        android:paddingRight="@dimen/space_10"
+        android:paddingTop="2.5dip">
 
         <CheckBox
             android:id="@+id/item_check"
@@ -30,7 +32,6 @@
             >
 
             <LinearLayout
-
                 android:layout_width="match_parent"
                 android:layout_height="0dip"
                 android:layout_weight="1"
