--- a/common/src/main/res/layout/view_error_layout.xml
+++ b/common/src/main/res/layout/view_error_layout.xml
@@ -36,8 +36,7 @@
                     android:id="@+id/load_img"
                     android:layout_width="45dip"
                     android:layout_height="45dip"
-                    android:layout_centerInParent="true"
-                    android:layout_marginLeft="30dip"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginTop="20dip"
                     android:scaleType="fitCenter"
                     android:src="@drawable/logo_white"/>
@@ -46,9 +45,7 @@
                     android:id="@+id/animProgress"
                     android:layout_width="65dip"
                     android:layout_height="65dip"
-                    android:layout_centerInParent="true"
-                    android:layout_marginLeft="20dip"
-                    android:layout_marginRight="20dip"
+                    android:layout_centerHorizontal="true"
                     android:layout_marginTop="10dip"
                     android:indeterminateDrawable="@drawable/loading_animation"/>
 
