--- a/campusjobs/src/main/res/layout/item_campus.xml
+++ b/campusjobs/src/main/res/layout/item_campus.xml
@@ -10,7 +10,9 @@
         android:layout_height="80dip"
         android:layout_marginLeft="@dimen/padding_default"
         android:layout_marginRight="@dimen/padding_default"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="2.5dip"
+        android:paddingTop="2.5dip">
 
         <LinearLayout
             android:layout_width="match_parent"
