--- a/campusjobs/src/main/res/layout/item_csearchresult.xml
+++ b/campusjobs/src/main/res/layout/item_csearchresult.xml
@@ -6,11 +6,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dip"
+        android:layout_height="85dip"
         android:background="@drawable/list_item_bg"
         android:orientation="horizontal"
         android:paddingLeft="@dimen/space_10"
-        android:paddingRight="@dimen/space_10">
+        android:paddingRight="@dimen/space_10"
+        android:paddingBottom="2.5dip"
+        android:paddingTop="2.5dip">
 
         <CheckBox
             android:id="@+id/item_check"
