--- a/bluecollar/src/main/res/layout/fragment_blue_home.xml
+++ b/bluecollar/src/main/res/layout/fragment_blue_home.xml
@@ -9,112 +9,119 @@
         android:orientation="vertical">
 
         <include layout="@layout/topbar"/>
-
-        <ScrollView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="none">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <!-- 广告位  -->
-                <cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager
-                    android:id="@+id/adViewPager"
-                    android:layout_width="fill_parent"
-                    android:layout_height="@dimen/main_banner_height"
-                    android:visibility="gone"/>
-
-                <LinearLayout
+            android:layout_height="match_parent">
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent"
+                    android:scrollbars="none">
 
                     <LinearLayout
-                        android:id="@+id/blue_search_but"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/padding_small"
-                        android:background="@drawable/edittext_wite_bg"
-                        android:clickable="true"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
-                        android:paddingBottom="@dimen/padding_small"
-                        android:paddingLeft="12dip"
-                        android:paddingRight="@dimen/padding_small"
-                        android:paddingTop="@dimen/padding_small">
+                        android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/etSearch"
+                        <!-- 广告位  -->
+                        <cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager
+                            android:id="@+id/adViewPager"
+                            android:layout_width="fill_parent"
+                            android:layout_height="@dimen/main_banner_height"
+                            android:visibility="gone"/>
+
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:background="@color/transparent"
-                            android:clickable="false"
-                            android:hint="输入关键字/职位/公司搜索"
-                            android:textSize="@dimen/text_default"/>
+                            android:background="@color/white"
+                            android:orientation="vertical">
 
-                        <Button
-                            android:id="@+id/btnSearch"
-                            android:layout_width="65dip"
-                            android:layout_height="35dip"
-                            android:background="@drawable/button_bg"
-                            android:clickable="false"
-                            android:text="搜索"
+                            <LinearLayout
+                                android:id="@+id/blue_search_but"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="@dimen/padding_small"
+                                android:background="@drawable/edittext_wite_bg"
+                                android:clickable="true"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal"
+                                android:paddingBottom="@dimen/padding_small"
+                                android:paddingLeft="12dip"
+                                android:paddingRight="@dimen/padding_small"
+                                android:paddingTop="@dimen/padding_small">
+
+                                <TextView
+                                    android:id="@+id/etSearch"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:background="@color/transparent"
+                                    android:clickable="false"
+                                    android:hint="输入关键字/职位/公司搜索"
+                                    android:textSize="@dimen/text_default"/>
+
+                                <Button
+                                    android:id="@+id/btnSearch"
+                                    android:layout_width="65dip"
+                                    android:layout_height="35dip"
+                                    android:background="@drawable/button_bg"
+                                    android:clickable="false"
+                                    android:text="搜索"
+                                    android:textColor="@color/white"
+                                    android:textSize="@dimen/text_default"/>
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/historyLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/padding_small"
+                            android:background="@color/white"
+                            android:orientation="horizontal"
+                            android:paddingTop="@dimen/padding_small"
+                            android:visibility="gone">
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/historyLayout2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/white"
+                            android:orientation="horizontal"
+                            android:paddingBottom="@dimen/padding_small"
+                            android:paddingTop="@dimen/padding_small"
+                            android:visibility="gone"></LinearLayout>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/space_40"
+                            android:layout_marginTop="@dimen/padding_small"
+                            android:background="@color/bule_low_color"
+                            android:drawableLeft="@mipmap/like"
+                            android:gravity="center_vertical"
+                            android:paddingLeft="@dimen/padding_small"
+                            android:text=" 猜你喜欢"
                             android:textColor="@color/white"
                             android:textSize="@dimen/text_default"/>
 
+
+                        <LinearLayout
+                            android:id="@+id/job_box"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/white"
+                            android:orientation="vertical"></LinearLayout>
+
                     </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/historyLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/padding_small"
-                    android:background="@color/white"
-                    android:orientation="horizontal"
-                    android:paddingTop="@dimen/padding_small"
-                    android:visibility="gone">
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/historyLayout2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:orientation="horizontal"
-                    android:paddingBottom="@dimen/padding_small"
-                    android:paddingTop="@dimen/padding_small"
-                    android:visibility="gone"></LinearLayout>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/space_40"
-                    android:layout_marginTop="@dimen/padding_small"
-                    android:background="@color/bule_low_color"
-                    android:drawableLeft="@mipmap/like"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/padding_small"
-                    android:text=" 猜你喜欢"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/text_default"/>
-
-
-                <LinearLayout
-                    android:id="@+id/job_box"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:orientation="vertical"></LinearLayout>
-
-            </LinearLayout>
-        </ScrollView>
+                </ScrollView>
+            <cn.goodjobs.common.view.empty.EmptyLayout
+                android:id="@+id/error_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></cn.goodjobs.common.view.empty.EmptyLayout>
+        </RelativeLayout>
     </LinearLayout>
 
     <TextView
@@ -150,9 +157,4 @@
             android:src="@drawable/tip_change"/>
     </RelativeLayout>
 
-
-    <cn.goodjobs.common.view.empty.EmptyLayout
-        android:id="@+id/error_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></cn.goodjobs.common.view.empty.EmptyLayout>
 </RelativeLayout>
