--- a/headhuntingjob/src/main/res/layout/activity_recommend.xml
+++ b/headhuntingjob/src/main/res/layout/activity_recommend.xml
@@ -306,7 +306,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/padding_small"
-                    android:text="我已经认真阅读并完全同意《"
+                    android:text="我已阅读并同意《"
                     android:textColor="@color/main_color"
                     android:textSize="@dimen/text_default" />
 
